# kbd-auto-layout

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_RELEASES.md  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_1.0.0.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release-and-publish.yml  release.yml
.pybuild/cpython3_3.12/: kbd_auto_layout-0.1.0-py3-none-any.whl  kbd_auto_layout-0.1.1-py3-none-any.whl
.pybuild/cpython3_3.12/scripts/: kbd-auto-layoutctl
debian/: changelog  control  copyright  debhelper-build-stamp  files  kbd-auto-layout.install  kbd-auto-layout.manpages  kbd-auto-layout.postinst.debhelper  kbd-auto-layout.postrm.debhelper  kbd-auto-layout.prerm.debhelper  kbd-auto-layout.substvars  kbd-auto-layout.user.service  rules
debian/kbd-auto-layout/DEBIAN/: control  md5sums  postinst  postrm  prerm
debian/source/: options
docs/: kbd-auto-layoutctl.1  kbd-auto-layoutd.1
packaging/completions/zsh/: _kbd-auto-layoutctl
packaging/systemd/: kbd-auto-layout.service
scripts/: dev-install.sh
src/kbd_auto_layout/: backends.py  cli.py  config.py  daemon.py  events.py  models.py  service.py  xinput.py  xkb.py
tests/: test_backends.py  test_cli_commands.py  test_cli_detect.py  test_cli_parsing.py  test_cli_service_commands.py  test_cli_setup_helpers.py  test_config.py  test_daemon_apply.py  test_daemon_events.py  test_daemon_rule_selection.py  test_events.py  test_rule_specificity.py  test_xinput_devices.py  test_xinput_matching.py  test_xkb.py
(+12 files in other folders)
